create OOP conversion of cart

--- a/Jasmine Test/test.html
+++ b/Jasmine Test/test.html
@@ -16,9 +16,14 @@
 
   <script src="utils/money test.js" type="module"></script>
   <script src="data/cartTest.js" type="module"></script>
+  <script src="checkout/orderSummartTest.js" type="module"></script>
 
 </head>
 
 <body>
+
+  <div class="js-test-container">
+
+  </div>
 </body>
 </html>
